--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <body>
-    <img src="Images/cover.jpg" width="75%" alt="banner">
+    <img src="images/cover.jpg" width="75%" alt="banner">
     <h1>J K S SURYARAO's Portal</h1>
     <h2>About Me</h2>
     <p>I am a student from IIT (ISM) DHANBAD.</p>
