--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,8 @@
   <header>
     <title>J K S SURYARAO's Resume</title>
     <link rel="stylesheet" href="master.css" >
-    <link rel="FaviconIcon" href="favicon.ico" type="images/favicon_CV.ico">
-    <link rel="shortcut" href="favicon.ico" type="images/favicon_CV.ico">
+    <link rel="FaviconIcon" href="images/favicon_CV.ico" type="image/x-icon">
+    <link rel="shortcut" href="images/favicon_CV.ico" type="image/x-icon">
     <meta name="viewpoint" content="width-device-width, intial-scale-1, shrink-to-fit-no">
     <meta name="name" content="J K S SURYARAO">
     <meta name="robots" content="noindex, nofollow">
