--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>with Major in Electrical and Minor in Computer Science and engineering.</p>
     <h3>Credentials and Portfolio</h3>
 
-    <p><a href="resume.html"> My Resume</a> |<a href="https://github.com/jkssuryarao"> My GitHub</a> </p>
+    <p><a href="index1.html"> My Resume</a> |<a href="https://github.com/jkssuryarao"> My GitHub</a> </p>
     <h4>Contact</h4>
 
     <p>Email: <a href="mailto:jkssuryarao@gmail.com">jkssuryarao@gmail.com</a></p>
