--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
-<link href="stylesheet" href="master.css">
+<link href="stylesheet" href="resumecss.css">
 
 <div class="wrapper clearfix">
   <div class="left">
