--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,6 @@
-<link rel="stylesheet" href="resumecss.css">
+<!--<link rel="stylesheet" href="resumecss.css">-->
+
+ <link rel="stylesheet" href="resumecss.css">
 
 <div class="wrapper clearfix">
   <div class="left">
