--- a/rlinux.html
+++ b/rlinux.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="rlinux.css">
 <div class="container">
    <h1 id="loadingH1"><span><i class="fa fa-cogs"></i></span> RUNNING IDENTITY PROTOCOL<span id="loading">.</span></h1>
    <div class="img-container">
