--- a/rlinux.html
+++ b/rlinux.html
@@ -1,6 +1,7 @@
 
 <div class="container">
    <link rel="stylesheet" href="rlinux.css">
+   <script src="rlinux.js"></script>
    <h1 id="loadingH1"><span><i class="fa fa-cogs"></i></span> RUNNING IDENTITY PROTOCOL<span id="loading">.</span></h1>
    <div class="img-container">
       <div id="identity-results">
